# quadruped_hurricane2026_nav2

./: .gitignore  .gitmodules  README.md
hurricane_description/: CMakeLists.txt  README.md  package.xml
hurricane_description/config/: gazebo.yaml  robot_control.yaml  visualize_urdf.rviz
hurricane_description/launch/: gazebo_rl_control.launch.py  hurricane_view_launch.py  visualize.launch.py
hurricane_description/model/mid360/: mid360.csv.back  mid360.xacro
hurricane_description/rviz/: hurricane_description.rviz
hurricane_description/urdf/: gazebo.xacro  hurricane_description.urdf  leg.xacro  robot.xacro
hurricane_description/xacro/: gazebo.xacro  gazebo_classic.xacro  leg.xacro  robot.sdf  robot.xacro
loam_interface/: CMakeLists.txt  package.xml
loam_interface/include/loam_interface/: loam_interface.hpp
loam_interface/launch/: loam_interface_launch.py
loam_interface/src/: loam_interface.cpp
quad_nav2_bringup/: CMakeLists.txt  package.xml
quad_nav2_bringup/config/: nav2_params.yaml
quad_nav2_bringup/launch/: quad_nav2_bringup_launch.py
quad_nav2_bringup/worlds/: big.world
sim_pointcloud/: CMakeLists.txt  package.xml
sim_pointcloud/src/: livox_points_plugin.cpp
